--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,24 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.2
 
+  # Hive for local storage
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.2
+  
+  # State management
+  provider: ^6.0.5
+  
+  # PDF generation
+  pdf: ^3.11.0
+  printing: ^5.12.0
+  
+  # Local notifications
+  flutter_local_notifications: ^17.2.2
+  
+  # URL launcher for help & support
+  url_launcher: ^6.2.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -51,6 +69,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
+  # Hive code generation
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
